--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
     <title>MagicPay</title>
   </head>
   <body>
-    <h1>ASsalomou aleykum</h1>
+    <div class="container">
+      <div class="header">
+        <div class="header__logo"><img src="img/logo.png" alt="" /></div>
+        <div class="header__search">
+          <input
+            type="text"
+            placeholder="Search hotels"
+            class="header__search-input"
+          />
+        </div>
+        <div class="header__right">
+          <svg class="header__right-icon">
+            <use xlink:href="img/sprite.svg#icon-bookmark"></use>
+          </svg>
+          <svg class="header__right-icon">
+            <use xlink:href="img/sprite.svg#icon-chat"></use>
+          </svg>
+          <div class="header__user">
+            <img src="img/user-1.jpg" alt="" class="header__user-img" />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
